# agent

./: .editorconfig  .gitignore  Bakefile.sh  README.md  broker.py  dev.kofler.kaxon.native.json  launch.sh  main.py  pyproject.toml
share/: dev.kofler.kaxon.native.json  kaxon.desktop
src/agent/: main.py
src/agent/subcommands/: __init__.py  app_build.py  app_install.py  app_uninstall.py  install.py  launch.py  webext_native_client.py
src/agent/util/: __init__.py  util.py
src/subcommands/: install.py  launch.py  webext_native_client.py
