[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Edwin Kofler <edwin@kofler.dev>"]
readme = "README.md"
packages = [
	{ include = "agent", from = "src" }
]

[tool.poetry.scripts]
agent = 'agent.main:run'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
jinja2 = "^3.1.2"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
